--- a/src/components/roomcreate/style.scss
+++ b/src/components/roomcreate/style.scss
@@ -2,4 +2,10 @@
     .paper {
         padding: 1rem;
     }
+    .container--drawings {
+        min-height: 600px;
+        max-height: 600px;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
 }
