--- a/src/style.scss
+++ b/src/style.scss
@@ -16,6 +16,10 @@ a {
     padding-top: 30px;
 }
 
+.paper {
+    padding: 1rem;
+}
+
 .icon--mleft {
     margin-left: 8px;
 }
@@ -24,11 +28,27 @@ a {
     margin: auto !important;
 }
 
+.container--fullwidthcenter {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.width-100 {
+    width: 100%;
+}
+
+.windowheight {
+    height: 100vh;
+}
+
 @for $i from 1 through 10 {
-    .mtop--#{$i} {
+    .mtop-#{$i} {
         margin-top: 0rem+$i !important;
     }
-    .mbottom--#{$i} {
+    .mbottom-#{$i} {
         margin-bottom: 0rem+$i !important;
     }
 }
