further styling, add weight slider to canvas

--- a/src/style.scss
+++ b/src/style.scss
@@ -36,6 +36,12 @@ a {
     align-items: center;
 }
 
+.modal {
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 7rem;
+}
+
 .width-100 {
     width: 100%;
 }
